# pyrpio

./: .gitignore  .pylintrc  LICENSE.md  MANIFEST.in  Pipfile  README.md  bitbucket-pipelines.yml  build.py  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
docs/: mdio.md
docs/source/: conf.py  index.rst  modules.rst  pyrpio.i2c.rst  pyrpio.rst  pyrpio.spi.rst
old/: mdio.py
pyrpio/: __init__.py  defs.py  gpio.py  i2c.py  i2c_register_device.py  mdio.py  pinmap.py  pwm.py  spi.py  types.py
pyrpio/i2c/: __init__.py  ftdii2c.py  httpi2c.py  i2c.py  register_device.py  test_register_device.py  types.py
pyrpio/lib/: bcm2835.c  bcm2835.h  bcm2835_ext.h  mdio.c  mdio.h  mdio_ext.c  mdio_ext.h  module.c
pyrpio/mdio/: __init__.py  mdio.c  mdio.h  mdio.py  module.c
pyrpio/spi/: __init__.py  spi.py  types.py
tests/: test_mdio.py
