[tool.poetry]
name = "PyRPIO"
version = "0.1.0"
description = "Python-wrapped RPIO"
authors = ["Adam Page <adam.page@samtec.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Samtec-ASH/pyrpio"
# include = ["pyrpio/lib/*.h"]
# build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pep8 = "^1.7.1"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
