[tool.poetry]
name = "PyRPIO"
version = "0.2.1"
description = "Python-wrapped RPIO"
authors = ["Adam Page <adam.page@samtec.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Samtec-ASH/pyrpio"
# include = ["pyrpio/lib/*.h"]
# build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
pyftdi = {version = "^0.53.2", optional = true, allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pep8 = "*"
pylint = "*"
autopep8 = "*"
flake8 = "*"
ipython = "*"

[tool.poetry.extras]
ftdi = ["pyftdi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
