[tool.poetry]
name = "PyRPIO"
version = "0.4.0"
description = "Python-wrapped RPIO"
authors = ["Adam Page <adam.page@samtec.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Samtec-ASH/pyrpio"
# include = ["pyrpio/lib/*.h"]
# build = "build.py"

[tool.taskipy.tasks]
lint = "pylint --rcfile .pylintrc pyrpio"
test = "pytest tests/"
docs = "cd docs/ && sphinx-apidoc -f -o ./source ../pyrpio && make clean && make html"


[tool.poetry.dependencies]
python = "^3.7"
pyftdi = {version = "^0.53.2", optional = true, allow-prereleases = true}
httpx = {version = "^0.18.2", optional = true, allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pep8 = "*"
pylint = "*"
autopep8 = "*"
flake8 = "*"
ipython = "*"
myst-parser = "^0.15.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-rtd-theme = "^0.5.2"
Sphinx = "^4.1.2"
taskipy = "^1.8.1"

[tool.poetry.extras]
ftdi = ["pyftdi"]
httpx = ["httpx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
